feat: add Zustand, TanStack Query, Jotai, Redux Toolkit, and Preact integrations - Add syncStateMiddleware for Zustand stores - Add useSyncState hook for TanStack Query integration - Add syncStateAtom for Jotai atoms - Add syncStateMiddleware for Redux Toolkit - Add useSyncState hook for Preact - Add E2E tests for all new frameworks - Update README with bundle size table - Fix various E2E test issues

--- a/e2e/renderer.html
+++ b/e2e/renderer.html
@@ -8,7 +8,7 @@
   <body>
     <div id="app">ready</div>
     <script>
-      // 标记渲染端已加载
+      // Mark renderer as loaded
       const app = document.getElementById("app");
       if (app) {
         app.textContent = "ready";
